Nginx Kubernetes Ingress/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - pathType: Exact
            path: /bookstore
            backend:
              service:
                name: app1-svc
                port:
                  number: 80
          - pathType: Exact
            path: /library
            backend:
              service:
                name: app2-svc
                port:
                  number: 80
